# libfact

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  build_vs18.bat  design_doc.md
bench/: plot_pi_diff.py  test_riemann_accuracy.cpp
bench/fixint/: bench_barrett.cpp  bench_divexact.cpp  bench_divrem_gmp.cpp  bench_ecm_220bit.cpp  bench_ecm_costs.cpp  bench_ecm_prob.cpp  bench_ecm_validate.cpp  bench_edwards.cpp  bench_eecm.cpp  bench_gcd.cpp  bench_montgomery.cpp  bench_mpfq.cpp  bench_nt_vs_flint.cpp  bench_ntt_vs_gmp.cpp  bench_polyeval.cpp  bench_polymul.cpp  bench_rho_inner.cpp  bench_rho_vs_squfof.cpp  bench_simd_mod.cpp  bench_stage2_poly.cpp  bench_trial.cpp  bench_trial_smooth.cpp  bench_uint.cpp  bench_vs_ecm.cpp  bench_vs_gmp.cpp  bench_vs_hurchalla.cpp  mpfq_kernels_x86_64.h  plot_ntt_vs_gmp_diff.py  test_eecm_160bit.cpp  test_eecm_e2e.cpp  test_eecm_setup.cpp  test_eecm_smul.cpp  test_eecm_stages.cpp  test_kronecker_correctness.cpp  test_polyeval_composite.cpp  test_stage2_poly.cpp  test_zint_ntt_debug.cpp  test_zint_ntt_dispatch.cpp  test_zint_ntt_regress.cpp  test_zint_smoke.cpp
bench/primesieve/: bench_fast_primesieve_v3.cpp  plot_pi_approx.py  primesieve_riemann.hpp
docs/: wsl.md
include/zfactor/: bpsw.h  edwards.h  eecm.h  jacobi.h  perfect_power.h  rho.h  sieve.h  siqs.h  sqrt_mod.h  squfof.h  trial.h  uint.h
include/zfactor/eecm/: curve_setup.h  scalar_mult.h  schedule_generated.h  stage2.h  stage2_poly.h
include/zfactor/fixint/: barrett.h  exp_plan.h  gcd.h  gmp_nt.h  iroot.h  modular.h  montgomery.h  mpn.h  simd_mod.h  uint.h
include/zfactor/fixint/detail/: divexact1.h  divexact1_generated.h  montmul_adcx_generated.h  montmul_inline.h  mpn_common.h  mpn_generated.h  mpn_generic.h
include/zfactor/mpn/: mpn.h  mpn_common.h  mpn_generated.h  mpn_generic.h  mpn_intrin.h
include/zfactor/siqs/: factor_base.h  lanczos.h  params.h  poly.h  relation.h  sieve.h  sqrt_phase.h  tdiv.h
primecount_bin/: README.txt
scripts/: gen_mpn.py
src/: main.cpp
src/core/: arith.h  platform.h  uint.h
src/fixint/: divexact_x86_64.S  divrem_x86_64.S  montmul_x86_64.S  sqr_diag_addlsh1_x86_64.S
src/flint_patches/: flint_mpn_mul_zint.c  fmpz_poly_mul_zint.c  fmpz_poly_mul_zint_bridge.cpp
src/gpu/shaders/: sieve_large.wgsl  sieve_small.wgsl
src/siqs/: lanczos.cpp
src/util/: block_vec.h  fast_primesieve.h  fast_primesieve_small.h  fast_primesieve_v2.h  fast_primesieve_v3.h  intrin.h  popcnt.h  primesieve.h  prng.h  timer.h
test/: test_primesieve.cpp
tests/: bench_uint.cpp  test_uint.cpp
tests/fixint/: test_bpsw.cpp  test_divexact1.cpp  test_gcd.cpp  test_iroot.cpp  test_millerrabin.cpp  test_montgomery.cpp  test_perfect_power.cpp  test_qr.cpp  test_rho.cpp  test_simd_mod.cpp  test_siqs.cpp  test_siqs_debug.cpp  test_squfof.cpp  test_trial.cpp  test_uint.cpp
tests/primesieve/: test_primesieve.cpp
tests/siqs/: test_lanczos.cpp
tools/: gen_test_semiprimes.py
tools/eecm/: calibration.csv  fit_schedule.py  optimize_schedule.py
tools/fixint/: gen_divexact1.py  gen_divexact_ir.py  gen_divrem_ir.py  gen_montmul_adcx.py  gen_montmul_ir.py  gen_mpn.py
tools/wsl/: build_gmp.sh
